--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -250,8 +250,8 @@
             <div class="contact-section">
                 <h2>Contatti</h2>
                 <p>Per domande riguardo questa privacy policy o per esercitare i tuoi diritti, contattaci:</p>
-                <p><strong>Email:</strong> privacy@tilde-app.com</p>
-                <p><strong>Sviluppatore:</strong> Josnapp</p>
+                <p><strong>Email:</strong> jeck.dev82@gmail.com</p>
+               
             </div>
 
             <div class="last-updated">
