Update company name and contact email in terms of service

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -297,13 +297,13 @@
             <p>Se una qualsiasi parte di questi termini viene ritenuta non valida o non applicabile, le restanti parti rimarranno in pieno vigore ed effetto.</p>
 
             <h2><span class="section-number">13</span>Intero Accordo</h2>
-            <p>Questi Termini di Servizio, insieme alla Privacy Policy, costituiscono l'intero accordo tra te e Josnapp riguardo all'uso dell'App.</p>
+            <p>Questi Termini di Servizio, insieme alla Privacy Policy, costituiscono l'intero accordo tra te e Tilde riguardo all'uso dell'App.</p>
 
             <div class="contact-section">
                 <h2>Contatti</h2>
                 <p>Per domande riguardo questi termini di servizio, contattaci:</p>
-                <p><strong>Email:</strong> support@tilde-app.com</p>
-                <p><strong>Sviluppatore:</strong> Josnapp</p>
+                <p><strong>Email:</strong> jeck.dev@gmail.com</p>
+               
                 <p><strong>Paese:</strong> Italia</p>
             </div>
 
