--- a/privacy-policy-en.html
+++ b/privacy-policy-en.html
@@ -250,8 +250,8 @@
             <div class="contact-section">
                 <h2>Contact</h2>
                 <p>For questions about this privacy policy or to exercise your rights, contact us:</p>
-                <p><strong>Email:</strong> privacy@tilde-app.com</p>
-                <p><strong>Developer:</strong> Josnapp</p>
+                <p><strong>Email:</strong> jeck.dev82@gmail.com</p>
+               
             </div>
 
             <div class="last-updated">
