Modify contact details in terms of service
Updated contact email and developer name in terms of service.

--- a/terms-of-service-en.html
+++ b/terms-of-service-en.html
@@ -285,7 +285,7 @@
 
             <h3>10.1 Trademarks</h3>
             <ul>
-                <li>"Tilde" is a trademark of Josnapp</li>
+               
                 <li>Third-party service logos and names belong to their respective owners</li>
                 <li>Use of third-party trademarks is for identification purposes only</li>
             </ul>
@@ -302,8 +302,8 @@
             <div class="contact-section">
                 <h2>Contact</h2>
                 <p>For questions about these terms of service, contact us:</p>
-                <p><strong>Email:</strong> support@tilde-app.com</p>
-                <p><strong>Developer:</strong> Josnapp</p>
+                <p><strong>Email:</strong> jeck.dev82@gmail.com</p>
+               
                 <p><strong>Country:</strong> Italy</p>
             </div>
 
